--- a/inscripciones.html
+++ b/inscripciones.html
@@ -109,61 +109,57 @@
             <h2 class="h1-responsive font-weight-bold">Anatomía IB</h2>
             <p class="page-description text-center">Cualidades que el alumno adquiere en su formación IB.</p>
          </div>
-        <div class="container">
+        <div class="container py-3">
             <!-- Grid row -->
-            <div class="row pb-3">
+            <div class="row">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/loupe.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Indagadores</h5>
-                    <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
+                <div class="col-12 col-6 col-sm">
+                    <img src="images/kindermain.jpg" alt="" style="max-width:100%;">
+                    <h5 class="font-weight-bold mt-2">PreKinder / Kindergarten</h5>
+                    <p class="grey-text mb-md-0 mb-2">Desarrollan su curiosidad natural y demuestran autonomía en su
                         aprendizaje.</p>
+                    <div class="col-12 text-center mb-5">
+                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                    </div>
+
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/help.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
+                <div class="col-12 col-6 col-sm">
+                    <img src="images/primaria.webp" alt="" style="max-width:100%;">
+                    <h5 class="font-weight-bold mt-2">Primaria</h5>
+                    <p class="grey-text mb-md-0 mb-2">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
                     </p>
-                </div>
-                <!-- Grid column -->
-                <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/innovation.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Pensadores</h5>
-                    <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
-                        crítica y creativa</p>
+                    <div class="col-12 text-center mb-5">
+                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                    </div>
                 </div>
                 <!-- Grid column -->
             </div>
             <!-- Grid row -->
         </div>
-        <div class="container">
+        <div class="container py-3">
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/charity.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Solidarios</h5>
-                    <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
+                <div class="col-12 col-6 col-sm">
+                    <img src="images/secundaria.webp" alt="" style="max-width:100%;">
+                    <h5 class="font-weight-bold mt-2">Secundaria</h5>
+                    <p class="grey-text mb-md-0 mb-2">Muestran empatía, sensibilidad y respeto por las necesidades y
                     sentimientos de los demás.</p>
+                    <div class="col-12 text-center mb-5">
+                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                    </div>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Audaces</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p>
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-6 col-md">
-                    <img src="images/openmind.svg" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
-                    <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
-                        personas y comunidades.</p>
+                <div class="col-12 col-6 col-sm">
+                    <img src="images/preparatoria.webp" alt="" style="max-width:100%;">
+                    <h5 class="font-weight-bold mt-2">Preparatoria</h5>
+                    <p class="grey-text mb-md-0 mb-2">Exploran nuevos roles, ideas y estrategias.</p>
+                    <div class="col-12 text-center mb-5">
+                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                    </div>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -171,6 +167,60 @@
         </div>
     </section>
     <!--OTO-->
+
+    <hr>
+
+    <div class="text-center mt-5 mb-3">
+        <h1 class="text-center">Convenios Anglo</h1>
+        <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
+    </div>
+    
+
+    <div class="container">
+        <div class="card-deck">
+            <div class="card">
+            <img class="card-img-top" src="images/SEDENA.png" alt="Card image cap">
+            </div>
+            <div class="card">
+            <img class="card-img-top" src="images/apm.png" alt="Card image cap">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="card-deck">
+            <div class="card">
+            <img class="card-img-top" src="images/suterm.png" alt="Card image cap">
+            </div>
+            <div class="card">
+            <img class="card-img-top" src="images/agentes.png" alt="Card image cap">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row pb-5 pt-5 d-flex align-items-center">
+            <div class="col-12 col-md-6 ">
+                <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 80%;">
+            </div>
+            <div class="col-12 col-md-6 text-left align-self-center">
+                <div class="text-uppercase text-center">
+                    <h2>Anglo</h2>
+                </div>
+                <div>
+                        <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
+                    </div>
+                <div class="text-justify">
+                    <p>Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
+                    herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
+                    personal, universitario y profesional.</p>
+                </div>
+                <a href="https://wa.link/xr1quy" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block"><i class="fab fa-whatsapp fa-s fa-1x mx-3"></i>Más información</button></a>
+            </div>
+        </div>
+    </div>
+
 
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
