--- a/inscripciones.html
+++ b/inscripciones.html
@@ -97,18 +97,14 @@
   </header>
 <!-- HEADER-->
 
-  <div class="text-center mt-5 mb-3">
-    <h1 class="text-center">Etiquetas Colegio Anglo</h1>
-    <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
+  <div class="text-center mt-5 mb-3 text-center">
+    <h1>SÉ ANGLO</h1>
+    <h6>Y PREPÁRATE PARA LOS RETOS DEL MAÑANA</h6>
   </div>
 
     <!--OTO-->
     <section class="text-center my-5">
         <!-- Section heading -->
-        <div class=" my-5">
-            <h2 class="h1-responsive font-weight-bold">Anatomía IB</h2>
-            <p class="page-description text-center">Cualidades que el alumno adquiere en su formación IB.</p>
-         </div>
         <div class="container py-3">
             <!-- Grid row -->
             <div class="row">
