centrar imagen service

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -197,7 +197,7 @@
 
     <div class="container">
         <div class="row pb-5 pt-5 d-flex align-items-center">
-            <div class="col-12 col-md-6 ">
+            <div class="col-12 col-md-6 text-center">
                 <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 80%;">
             </div>
             <div class="col-12 col-md-6 text-left align-self-center">
@@ -205,8 +205,8 @@
                     <h2>Anglo</h2>
                 </div>
                 <div>
-                        <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
-                    </div>
+                    <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
+                </div>
                 <div class="text-justify">
                     <p>Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
                     herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
