margen imagen service

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -197,7 +197,7 @@
 
     <div class="container">
         <div class="row pb-5 pt-5 d-flex align-items-center">
-            <div class="col-12 col-md-6 text-center">
+            <div class="col-12 col-md-6 text-center my-4">
                 <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 80%;">
             </div>
             <div class="col-12 col-md-6 text-left align-self-center">
