Archivos pdf y cambios

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/preparatoria.webp" class="d-block w-100" alt="anglo foto">
+                        <img src="images/Kinder1.png" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
                         <img src="images/primaria2.webp" class="d-block w-100" alt="anglo foto">
@@ -215,23 +215,22 @@
                 <div class="row text-center mb-5 mt-3">
                     <div class="col-12 col-md">
                         <!-- <div class="box-alianzas"> -->
-                                <img src="images/ihpicture.webp" alt="">
+                                <img src="images/ihpicture.webp" alt="" max-width="100%">
                         <!-- </div> -->
                     </div>
                     <div class="col-12 col-md">
                         <!-- <div class="box-alianzas"> -->
-
-                            <img src="images/iblogo2.webp" alt="">
+                            <img src="images/iblogo2.png" alt=""  max-width="100%">
                         <!-- </div> -->
                     </div>
                     <div class="col-12 col-md">
                         <!-- <div class="box-alianzas"> -->
-                        <img src="images/logoamco.webp" alt="">
+                        <img src="images/logoamco.webp" alt=""  max-width="100%">
                         <!-- </div> -->
                     </div>
                     <div class="col-12 col-md">
                         <!-- <div class="box-alianzas"> -->
-                        <img src="images/cambridge.webp" alt="">
+                        <img src="images/cambridge.webp" alt=""  max-width="100%">
                         <!-- </div> -->
                     </div>
                 </div>
