--- a/inscripciones.html
+++ b/inscripciones.html
@@ -110,24 +110,24 @@
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/kindermain.jpg" alt="" style="max-width:100%;">
+                    <img src="images/kindermain.jpg" alt="" style="max-width:100%;" class="rounded">
                     <h5 class="font-weight-bold mt-2">PreKinder / Kindergarten</h5>
                     <p class="grey-text mb-md-0 mb-2">Desarrollan su curiosidad natural y demuestran autonomía en su
                         aprendizaje.</p>
                     <div class="col-12 text-center mb-5">
-                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
                     </div>
 
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/primaria.webp" alt="" style="max-width:100%;">
+                    <img src="images/primaria.webp" alt="" style="max-width:100%;" class="rounded">
                     <h5 class="font-weight-bold mt-2">Primaria</h5>
                     <p class="grey-text mb-md-0 mb-2">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
                     </p>
                     <div class="col-12 text-center mb-5">
-                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requsitos_PrimariaCiclo20-21.pdf " target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
@@ -139,22 +139,22 @@
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/secundaria.webp" alt="" style="max-width:100%;">
+                    <img src="images/secundaria.webp" alt="" style="max-width:100%;" class="rounded">
                     <h5 class="font-weight-bold mt-2">Secundaria</h5>
                     <p class="grey-text mb-md-0 mb-2">Muestran empatía, sensibilidad y respeto por las necesidades y
                     sentimientos de los demás.</p>
                     <div class="col-12 text-center mb-5">
-                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos_Secundaria_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
-                    <img src="images/preparatoria.webp" alt="" style="max-width:100%;">
+                    <img src="images/preparatoria.webp" alt="" style="max-width:100%;" class="rounded">
                     <h5 class="font-weight-bold mt-2">Preparatoria</h5>
                     <p class="grey-text mb-md-0 mb-2">Exploran nuevos roles, ideas y estrategias.</p>
                     <div class="col-12 text-center mb-5">
-                        <a href="inscripciones.html"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
+                        <a href="documentos/Requisitos _Bachillerato_Ciclo20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Ir a Inscripciones</button></a>
                     </div>
                 </div>
                 <!-- Grid column -->
@@ -166,7 +166,7 @@
 
     <hr>
 
-    <div class="text-center mt-5 mb-3">
+    <div class="text-center mt-5">
         <h1 class="text-center">Convenios Anglo</h1>
         <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
     </div>
@@ -199,11 +199,11 @@
     <div class="container">
         <div class="row pb-5 pt-5 d-flex align-items-center">
             <div class="col-12 col-md-6 text-center my-4">
-                <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 80%;">
+                <img src="images/service.svg" class="img-fluid rounded-sm" alt="Responsive image" style="max-width: 60%;">
             </div>
             <div class="col-12 col-md-6 text-left align-self-center">
                 <div class="text-uppercase text-center">
-                    <h2>Anglo</h2>
+                    <h2>Contáctanos</h2>
                 </div>
                 <div>
                     <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
