Cambio fotos main index

--- a/index.html
+++ b/index.html
@@ -103,27 +103,24 @@
             <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/Kinder1.png" class="d-block w-100" alt="anglo foto">
+                        <img src="images/Primaria-1.png" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/primaria2.webp" class="d-block w-100" alt="anglo foto">
+                        <img src="images/Kinder-1.png" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/preparatoria.webp" class="d-block w-100" alt="anglo foto">
+                        <img src="images/Secu-1.png" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/primaria2.webp" class="d-block w-100" alt="anglo foto">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="images/secundaria.webp" class="d-block w-100" alt="anglo foto">
+                        <img src="images/Prepa-1.png" class="d-block w-100" alt="anglo foto">
                     </div>
                     <div class="overlay">
-                        <div class="container">
+                        <div class="container m-0">
                             <div class="row align-items-center">
-                                <div class="col-md-6 text-center text-md-left">
+                                <div class="col-md-6 text-center text-md-left ml-5">
                                     <h1 class="">Vive la experiencia Anglo</h1>
                                     <p class="d-none d-md-block">Los retos los pone el mundo, nosotros las herramientas para superarlos.</p>
-                                    <p class="">¿Te gustaría saber más?</p> 
+                                    <p class="">¿Te gust    aría saber más?</p> 
                                     <a href="somos.html"><button type="button" class="btn btn-quieromas">Quiero saber más</button></a>
                                     
                                 </div>
