--- a/campus.html
+++ b/campus.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 ">
-                    <img src="images/campus1.webp" class="img-fluid rounded-sm" alt="Responsive image">
+                    <img src="images/Instalaciones-5.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row pb-5 pt-5">
                 <div class="col-12 col-lg-6 align-self-center">
-                    <img src="images/campus1.webp" class="img-fluid" alt="Responsive image">
+                    <img src="images/Instalaciones-2.png" class="img-fluid" alt="Responsive image">
                 </div>
                 <div class="col-12 col-lg-6 text-left align-self-center">
                     <h5 class="mt-3 mb-1 text-center">SERVICIOS</h5>
@@ -172,7 +172,7 @@
                         </ul>
                 </div>
                 <div class="col-12 col-lg-6 align-self-center">
-                    <img src="images/campus1.webp" class="img-fluid" alt="Responsive image">
+                    <img src="images/Instalaciones-1.png" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -188,23 +188,23 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/instalacionesanglo.JPG">
-                                <img src="images/instalacionesanglo.JPG" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-3.png">
+                                <img src="images/Instalaciones-3.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/alberca.JPG">
-                                <img src="images/alberca.JPG" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-6.png">
+                                <img src="images/Instalaciones-6.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/jardinbachillerato.png">
-                                <img src="images/jardinbachillerato.png" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-7.png">
+                                <img src="images/Instalaciones-7.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
@@ -212,24 +212,24 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/makersteam.JPG">
-                                <img src="images/makersteam.JPG" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-8.png">
+                                <img src="images/Instalaciones-8.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/canchatechada.JPG">
-                                <img src="images/canchatechada.JPG" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-9.png">
+                                <img src="images/Instalaciones-9.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/primariasalon.JPG">
-                                <img src="images/primariasalon.JPG" alt="Park" class="card-img-top">
+                            <a class="lightbox" href="images/Instalaciones-4.png">
+                                <img src="images/Instalaciones-4.png" alt="Park" class="card-img-top">
                             </a>
                         </div>
                     </div>
