--- a/modelo.html
+++ b/modelo.html
@@ -99,7 +99,7 @@
 
     <div class=" my-5 text-center">
         <h1 class="h1-responsive font-weight-bold">Modelo Educativo Anglo</h1>
-        <p class="page-description">Cualidades que el alumno adquiere en su formación IB.</p>
+        <!-- <p class="page-description">Cualidades que el alumno adquiere en su formación IB.</p> -->
     </div>
 
     <!--IB-->
@@ -146,38 +146,38 @@
                 <div class="col-6 col-md">
                     <img src="images/loupe.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Indagadores</h5>
-                    <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
-                        aprendizaje.</p>
+                    <!-- <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
+                        aprendizaje.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
                     <img src="images/help.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
-                    </p>
+                    <!-- <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
+                    </p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
                     <img src="images/innovation.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Pensadores</h5>
-                    <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
-                        crítica y creativa</p>
+                    <!-- <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
+                        crítica y creativa</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
                     <img src="images/comunicadores.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
-                    <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p>
+                    <!-- <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md mb-4">
                     <img src="images/integridad.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Integros</h5>
-                    <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p>
+                    <!-- <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p> -->
                 </div>
                 <!-- Grid column -->
             </div>
@@ -190,15 +190,15 @@
                 <div class="col-6 col-md">
                     <img src="images/charity.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Solidarios</h5>
-                    <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
-                    sentimientos de los demás.</p>
+                    <!-- <p class="grey-text mb-md-0 mb-5">Muestran empatía, sensibilidad y respeto por las necesidades y
+                    sentimientos de los demás.</p> -->
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
                 <div class="col-6 col-md">
                     <img src="images/man-jumping-up.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Audaces</h5>
-                    <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p>
+                    <!-- <p class="grey-text mb-md-0 mb-5">Exploran nuevos roles, ideas y estrategias.</p> -->
                 </div>
                 <!-- Grid column -->
 
@@ -206,8 +206,8 @@
                 <div class="col-6 col-md">
                     <img src="images/openmind.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">De Mentalidad abierta</h5>
-                    <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
-                        personas y comunidades.</p>
+                    <!-- <p class="grey-text mb-0 mb-3">Entienden y aprecian las perspectivas, valores y tradiciones de otras 
+                        personas y comunidades.</p> -->
                 </div>
                 <!-- Grid column -->
 
@@ -215,7 +215,7 @@
                 <div class="col-6 col-md">
                     <img src="images/equil.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Equilibrados</h5>
-                    <p class="grey-text mb-0">Entienden la importancia del equilibrio físico, mental y emocional.</p>
+                    <!-- <p class="grey-text mb-0">Entienden la importancia del equilibrio físico, mental y emocional.</p> -->
                 </div>
                 <!-- Grid column -->
 
@@ -223,8 +223,8 @@
                 <div class="col-6 col-md">
                     <img src="images/nube.svg" alt="" style="max-width:35%;">
                     <h5 class="font-weight-bold mt-2">Reflexivos</h5>
-                    <p class="grey-text mb-0">Reconocen y comprenden sus cualidades y limitaciones para contribuir a su
-                    aprendizaje y desarrollo personal.</p>
+                    <!-- <p class="grey-text mb-0">Reconocen y comprenden sus cualidades y limitaciones para contribuir a su
+                    aprendizaje y desarrollo personal.</p> -->
                 </div>
                 <!-- Grid column -->
             </div>
