--- a/prekinder.html
+++ b/prekinder.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="images/prekinder.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="images/Prekinder-1.png" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
         </div>
