--- a/kindergarten.html
+++ b/kindergarten.html
@@ -123,7 +123,7 @@
 
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="images/kindermain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                    <img src="images/Kinder-0.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
                 <div class="row pb-3">
                     <!-- Grid column -->
                     <div class="col-6 col-md">
-                        <img src="images/loupe.svg" alt="" style="max-width:35%;">
+                        <img src="images/natacion.png" alt="" style="max-width:35%;">
                         <h5 class="font-weight-bold mt-2">Indagadores</h5>
                         <p class="grey-text mb-md-0 mb-5">Desarrollan su curiosidad natural y demuestran autonomía en su
                             aprendizaje.</p>
@@ -152,7 +152,7 @@
                     <!-- Grid column -->
                     <!-- Grid column -->
                     <div class="col-6 col-md">
-                        <img src="images/help.svg" alt="" style="max-width:35%;">
+                        <img src="images/educacion-fisica.png" alt="" style="max-width:35%;">
                         <h5 class="font-weight-bold mt-2">Informados e Instruidos</h5>
                         <p class="grey-text mb-md-0 mb-5">Exploran conceptos, ideas y cuestiones de importancia local y mundial.
                         </p>
@@ -160,7 +160,7 @@
                     <!-- Grid column -->
                     <!-- Grid column -->
                     <div class="col-6 col-md">
-                        <img src="images/innovation.svg" alt="" style="max-width:35%;">
+                        <img src="images/computacion.png" alt="" style="max-width:35%;">
                         <h5 class="font-weight-bold mt-2">Pensadores</h5>
                         <p class="grey-text mb-0 mb-3">Aplican, por propia iniciativa, sus habilidades intelectuales de manera
                             crítica y creativa</p>
@@ -168,14 +168,14 @@
                     <!-- Grid column -->
                     <!-- Grid column -->
                     <div class="col-6 col-md">
-                        <img src="images/comunicadores.svg" alt="" style="max-width:35%;">
+                        <img src="images/biblioteca.png" alt="" style="max-width:35%;">
                         <h5 class="font-weight-bold mt-2">Buenos Comunicadores</h5>
                         <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p>
                     </div>
                     <!-- Grid column -->
                     <!-- Grid column -->
                     <div class="col-6 col-md mb-4">
-                        <img src="images/integridad.svg" alt="" style="max-width:35%;">
+                        <img src="images/ritmo-y-movimiento.png" alt="" style="max-width:35%;">
                         <h5 class="font-weight-bold mt-2">Integros</h5>
                         <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p>
                     </div>
@@ -207,23 +207,23 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder1.jpg">
-                                <img src="images/anglokinder1.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/kinder-2.png">
+                                <img src="images/kinder-2.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder2.jpg">
-                                <img src="images/anglokinder2.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/kinder-3.png">
+                                <img src="images/kinder-3.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder9.jpg">
-                                <img src="images/anglokinder9.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/kinder-4.png">
+                                <img src="images/kinder-4.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
@@ -231,24 +231,24 @@
                 <div class="row mb-3">
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder4.jpg">
-                                <img src="images/anglokinder4.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/kinder-5.png">
+                                <img src="images/kinder-5.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder10.jpg">
-                                <img src="images/anglokinder10.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/kinder-6.png">
+                                <img src="images/kinder-6.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a class="lightbox" href="images/anglokinder6.jpg">
-                                <img src="images/anglokinder6.jpg" alt="Park" class="card-img-top rounded-sm">
+                            <a class="lightbox" href="images/Kinder-7.png">
+                                <img src="images/Kinder-7.png" alt="Park" class="card-img-top rounded-sm">
                             </a>
                         </div>
                     </div>
