--- a/primaria.html
+++ b/primaria.html
@@ -122,7 +122,7 @@
                     <small><p>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</p></small>
                 </div>
                 <div class="col-12 col-lg-6 ">
-                    <img src="images/primariamain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                    <img src="images/Primaria.png" class="img-fluid rounded-sm" alt="Responsive image">
                 </div>
             </div>
         </div>
@@ -172,13 +172,6 @@
                         <p class="grey-text mb-0">Expresan ideas e información con confianza y creatividad.</p>
                     </div>
                     <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-6 col-md mb-4">
-                        <img src="images/integridad.svg" alt="" style="max-width:35%;">
-                        <h5 class="font-weight-bold mt-2">Integros</h5>
-                        <p class="grey-text mb-0">Actúan con honradez, equidad, justicia, tolerancia y respeto.</p>
-                    </div>
-                    <!-- Grid column -->
                 </div>
                 <!-- Grid row -->
             </div>
@@ -206,23 +199,23 @@
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria10.jpg">
-                                    <img src="images/angloprimaria10.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-1.png">
+                                    <img src="images/Primaria-1.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria2.jpg">
-                                    <img src="images/angloprimaria2.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-2.png">
+                                    <img src="images/Primaria-2.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria3.jpg">
-                                    <img src="images/angloprimaria3.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-3.png">
+                                    <img src="images/Primaria-3.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
@@ -230,24 +223,24 @@
                     <div class="row mb-3">
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria4.jpg">
-                                    <img src="images/angloprimaria4.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-4.png">
+                                    <img src="images/Primaria-4.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria5.jpg">
-                                    <img src="images/angloprimaria5.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-5.png">
+                                    <img src="images/Primaria-5.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="card">
-                                <a class="lightbox" href="images/angloprimaria6.jpg">
-                                    <img src="images/angloprimaria6.jpg" alt="Park" class="card-img-top rounded-sm">
+                                <a class="lightbox" href="images/Primaria-7.png">
+                                    <img src="images/Primaria-7.png" alt="Park" class="card-img-top rounded-sm">
                                 </a>
                             </div>
                         </div>
